--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,13 +128,14 @@
         android:background="@drawable/r8_stroke_line"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_l"
-        app:layout_constraintTop_toBottomOf="@id/tv_user_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#f8f8fa"
 
-        android:background="#f8f8fa">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_content">
 
         <TextView
             android:id="@+id/tv_user_group"
@@ -143,24 +144,56 @@
             android:layout_marginStart="@dimen/spacing_m"
             android:layout_marginLeft="@dimen/spacing_m"
             android:layout_marginTop="@dimen/spacing_l"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="@font/notosanskr_bold"
+            android:includeFontPadding="false"
 
             android:text="가입한 소모임"
-            android:textSize="14sp"
             android:textColor="#3b3e4a"
-            android:fontFamily="@font/notosanskr_bold"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
 
-            android:includeFontPadding="false" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_user_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_m"
-            android:layout_marginEnd="@dimen/spacing_m"
             android:layout_marginTop="@dimen/spacing_m"
-            app:layout_constraintTop_toBottomOf="@id/tv_user_group"/>
+            android:layout_marginEnd="@dimen/spacing_m"
+            app:layout_constraintTop_toBottomOf="@id/tv_user_group" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="@dimen/spacing_m"
+            android:layout_marginLeft="@dimen/spacing_m"
+            android:layout_marginTop="@dimen/spacing_xxl_2"
+            android:layout_marginEnd="@dimen/spacing_m"
+            android:layout_marginRight="@dimen/spacing_m"
+            android:background="@color/gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_user_group" />
+
+        <TextView
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_xs"
+            android:layout_marginEnd="@dimen/spacing_m"
+            android:layout_marginRight="@dimen/spacing_m"
+            android:fontFamily="@font/notosanskr_regular"
+            android:includeFontPadding="false"
+            android:text="로그아웃"
+            android:textColor="#7c7f90"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
