소모임 리스트 화면 및 프로필 화면 코드 수정

--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -34,7 +34,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:contentDescription="@null" />
+                    android:contentDescription="@null"
+                    android:scaleType="centerCrop"
+                    android:src="@color/sub_gray" />
 
                 <ImageView
                     android:id="@+id/image_group_category"
