--- a/app/src/main/res/layout/activity_info_group.xml
+++ b/app/src/main/res/layout/activity_info_group.xml
@@ -30,6 +30,7 @@
                 android:layout_height="match_parent"
 
                 android:contentDescription="@null"
+                android:scaleType="centerCrop"
                 android:src="@color/sub_gray" />
 
             <ImageView
@@ -67,6 +68,7 @@
         android:background="@drawable/ic_profile_rounded_rectangle" />
 
     <TextView
+        android:id="@+id/tv_member_number2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_xs"
@@ -276,6 +278,48 @@
             android:layout_marginEnd="@dimen/spacing_m"
             android:layout_marginTop="@dimen/spacing_l"
             app:layout_constraintTop_toBottomOf="@id/tv_user_group"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_caution"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/spacing_xxl_2"
+        app:layout_constraintTop_toBottomOf="@id/rv_group_members"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:background="#F0F0F0">
+
+        <ImageView
+            android:id="@+id/image_caution"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="@dimen/spacing_xs"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_caution"
+
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_caution" />
+
+        <TextView
+            android:id="@+id/tv_caution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:text="소모임원만 소모임 일정을\n열람할 수 있습니다!"
+            android:textSize="18sp"
+            android:textColor="#3b3e4a"
+            android:fontFamily="@font/notosanskr_regular"
+            android:gravity="center"
+
+            android:includeFontPadding="false" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
