--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,14 +72,16 @@
             android:id="@+id/check_btn"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@android:color/transparent"
+            android:layout_marginTop="@dimen/spacing_m"
             app:layout_constraintStart_toStartOf="@id/login_btn"
             app:layout_constraintTop_toBottomOf="@id/login_btn"
-            android:layout_marginTop="@dimen/spacing_m"
+
+            android:contentDescription="@null"
             app:srcCompat="@drawable/ic_disabled_check" />
+
         <TextView
             android:id="@+id/autologin"
-            android:layout_width="68dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="normal"
             android:textSize="14sp"
