--- a/app/src/main/res/layout/fragment_group_list2.xml
+++ b/app/src/main/res/layout/fragment_group_list2.xml
@@ -15,16 +15,26 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/image_user"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_image_user"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginTop="@dimen/spacing_xl"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
-            android:contentDescription="@null"
-            android:src="@drawable/profile_img" />
+            app:cardElevation="0dp"
+            app:cardCornerRadius="20dp">
+
+            <ImageView
+                android:id="@+id/image_user"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:contentDescription="@null"
+                android:src="@drawable/profile_img" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_user_name"
@@ -33,8 +43,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@id/image_user"
-            app:layout_constraintTop_toTopOf="@id/image_user"
+            app:layout_constraintStart_toEndOf="@id/cv_image_user"
+            app:layout_constraintTop_toTopOf="@id/cv_image_user"
 
             android:text="이지은님"
             android:textSize="16sp"
@@ -49,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             app:layout_constraintStart_toStartOf="@id/tv_user_name"
-            app:layout_constraintBottom_toBottomOf="@id/image_user"
+            app:layout_constraintBottom_toBottomOf="@id/cv_image_user"
 
             android:text="안녕하세요!"
             android:textSize="16sp"
@@ -75,7 +85,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/image_user"
+            app:layout_constraintTop_toTopOf="@id/cv_image_user"
 
             android:background="@drawable/ic_settings"/>
 
@@ -84,14 +94,16 @@
             android:layout_width="match_parent"
             android:layout_height="117dp"
             android:layout_marginTop="@dimen/spacing_l"
-            app:layout_constraintTop_toBottomOf="@id/image_user" />
+            app:layout_constraintTop_toBottomOf="@id/cv_image_user" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_group_schedule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_xl"
-            app:layout_constraintTop_toBottomOf="@id/rv_user_group">
+            app:layout_constraintTop_toBottomOf="@id/rv_user_group"
+
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_group_schedule"
@@ -131,7 +143,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
 
-                android:text="이런 소모임은 어때요? #스터디"
+                android:text="이런 소모임은 어때요?"
                 android:textSize="14sp"
                 android:textColor="@color/sub_black"
                 android:fontFamily="@font/notosanskr_bold"
