--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".profile.ProfileFragment">
 
-    <ImageView
-        android:id="@+id/image_user_01"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_image_user_01"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="36dp"
@@ -16,48 +16,84 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        android:contentDescription="@null"
-        android:src="@drawable/profile_img" />
+        app:cardElevation="0dp"
+        app:cardCornerRadius="20dp">
+
+        <ImageView
+            android:id="@+id/image_user_01"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            android:contentDescription="@null"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_img" />
+
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/image_edit_profile"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintEnd_toEndOf="@id/image_user_01"
-        app:layout_constraintBottom_toBottomOf="@id/image_user_01"
+        app:layout_constraintEnd_toEndOf="@id/cv_image_user_01"
+        app:layout_constraintBottom_toBottomOf="@id/cv_image_user_01"
 
         android:contentDescription="@null"
         app:srcCompat="@drawable/ic_edit_profile" />
 
-    <ImageView
-        android:id="@+id/image_user_02"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_image_user_02"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="@dimen/spacing_xs"
         android:layout_marginRight="@dimen/spacing_xs"
         android:layout_marginTop="@dimen/spacing_xl"
         android:layout_marginBottom="@dimen/spacing_l"
-        app:layout_constraintEnd_toStartOf="@id/image_user_01"
-        app:layout_constraintTop_toTopOf="@id/image_user_01"
-        app:layout_constraintBottom_toBottomOf="@id/image_user_01"
+        app:layout_constraintEnd_toStartOf="@id/cv_image_user_01"
+        app:layout_constraintTop_toTopOf="@id/cv_image_user_01"
+        app:layout_constraintBottom_toBottomOf="@id/cv_image_user_01"
 
-        android:contentDescription="@null"
-        app:srcCompat="@drawable/ic_profile" />
+        app:cardElevation="0dp"
+        app:cardCornerRadius="20dp">
 
-    <ImageView
-        android:id="@+id/image_user_03"
+        <ImageView
+            android:id="@+id/image_user_02"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:contentDescription="@null"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_profile" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_image_user_03"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginStart="@dimen/spacing_xs"
         android:layout_marginLeft="@dimen/spacing_xs"
         android:layout_marginTop="@dimen/spacing_xl"
         android:layout_marginBottom="@dimen/spacing_l"
-        app:layout_constraintStart_toEndOf="@id/image_user_01"
-        app:layout_constraintTop_toTopOf="@id/image_user_01"
-        app:layout_constraintBottom_toBottomOf="@id/image_user_01"
+        app:layout_constraintStart_toEndOf="@id/cv_image_user_01"
+        app:layout_constraintTop_toTopOf="@id/cv_image_user_01"
+        app:layout_constraintBottom_toBottomOf="@id/cv_image_user_01"
 
-        android:contentDescription="@null"
-        app:srcCompat="@drawable/ic_profile_vio" />
+        app:cardElevation="0dp"
+        app:cardCornerRadius="20dp">
+
+        <ImageView
+            android:id="@+id/image_user_03"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:contentDescription="@null"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_profile_vio" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_user_name"
@@ -66,7 +102,7 @@
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_user_01"
+        app:layout_constraintTop_toBottomOf="@id/cv_image_user_01"
 
         android:text="이지은"
         android:textSize="20sp"
@@ -79,8 +115,11 @@
         android:id="@+id/tv_user_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_marginTop="@dimen/spacing_xxs"
-        app:layout_constraintStart_toStartOf="@id/image_user_01"
+        app:layout_constraintStart_toStartOf="@id/cv_image_user_01"
+        app:layout_constraintEnd_toStartOf="@id/tv_user_school"
         app:layout_constraintTop_toBottomOf="@id/tv_user_name"
 
         android:text="서울 송파"
@@ -95,8 +134,11 @@
         android:id="@+id/tv_user_school"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
         android:layout_marginTop="@dimen/spacing_xxs"
-        app:layout_constraintEnd_toEndOf="@id/image_user_01"
+        app:layout_constraintStart_toEndOf="@id/tv_user_location"
+        app:layout_constraintEnd_toEndOf="@id/cv_image_user_01"
         app:layout_constraintTop_toBottomOf="@id/tv_user_name"
 
         android:text="홍익대"
@@ -157,13 +199,61 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_user_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="@dimen/spacing_m"
             android:layout_marginTop="@dimen/spacing_m"
+            android:layout_marginBottom="@dimen/spacing_m"
             android:layout_marginEnd="@dimen/spacing_m"
-            app:layout_constraintTop_toBottomOf="@id/tv_user_group" >
+            app:layout_constraintTop_toBottomOf="@id/tv_user_group"
+            app:layout_constraintBottom_toTopOf="@id/view">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_caution"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/spacing_m"
+            android:layout_marginTop="@dimen/spacing_m"
+            android:layout_marginBottom="@dimen/spacing_m"
+            android:layout_marginEnd="@dimen/spacing_m"
+            app:layout_constraintTop_toBottomOf="@id/tv_user_group"
+            app:layout_constraintBottom_toTopOf="@id/view"
+
+            android:visibility="gone"
+            android:background="#f8f8fa">
+
+            <ImageView
+                android:id="@+id/image_caution"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="@dimen/spacing_xs"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/tv_caution"
+
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_caution" />
+
+            <TextView
+                android:id="@+id/tv_caution"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:text="가입한 소모임이 없습니다."
+                android:textSize="18sp"
+                android:textColor="#3b3e4a"
+                android:fontFamily="@font/notosanskr_regular"
+                android:gravity="center"
+
+                android:includeFontPadding="false" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/view"
@@ -172,28 +262,28 @@
             android:layout_centerInParent="true"
             android:layout_marginStart="@dimen/spacing_m"
             android:layout_marginLeft="@dimen/spacing_m"
-            android:layout_marginTop="@dimen/spacing_xxl_2"
+            android:layout_marginBottom="@dimen/spacing_xs"
             android:layout_marginEnd="@dimen/spacing_m"
             android:layout_marginRight="@dimen/spacing_m"
             android:background="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rv_user_group" />
+            app:layout_constraintBottom_toTopOf="@id/logout"/>
 
         <TextView
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_xs"
             android:layout_marginEnd="@dimen/spacing_m"
             android:layout_marginRight="@dimen/spacing_m"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/notosanskr_regular"
             android:includeFontPadding="false"
             android:text="로그아웃"
             android:textColor="#7c7f90"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
