--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -5,8 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginRight="@dimen/spacing_m"
-    android:orientation="vertical"
-    android:padding="6dp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/member_image"
@@ -23,6 +22,6 @@
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="홍길동"
-        android:textColor="@color/sub_black"
+        android:textColor="#3b3e4a"
         android:textSize="12sp" />
 </LinearLayout>
