--- a/app/src/main/res/layout/my_group_item.xml
+++ b/app/src/main/res/layout/my_group_item.xml
@@ -27,7 +27,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:contentDescription="@null" />
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
+                android:src="@color/sub_gray" />
 
         </androidx.cardview.widget.CardView>
 
