테스트용 코드 제거 방장 수락 페이지 레이아웃 수정

--- a/app/src/main/res/layout/join_item.xml
+++ b/app/src/main/res/layout/join_item.xml
@@ -17,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/pro_min" />
 
     <TextView
@@ -32,6 +33,21 @@
         android:textColor="#3b3e4a"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/profile_image"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/category_image"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="@dimen/spacing_xxs"
+        android:layout_marginLeft="@dimen/spacing_xxs"
+        android:layout_marginTop="13dp"
+
+        android:background="@drawable/ic_button_study"
+        android:contentDescription="@null"
+        android:padding="@dimen/spacing_xs"
+        android:src="@drawable/writing_hand"
+        app:layout_constraintStart_toEndOf="@+id/user_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
