소모임 상세정보 화면 코드 수정

--- a/app/src/main/res/layout/activity_info_group.xml
+++ b/app/src/main/res/layout/activity_info_group.xml
@@ -187,6 +187,51 @@
             style="?android:attr/borderlessButtonStyle"
             android:background="@drawable/ic_button"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btn_group_chatroom"
+            android:layout_width="76dp"
+            android:layout_height="34dp"
+            android:layout_marginEnd="@dimen/spacing_m"
+            android:layout_marginRight="@dimen/spacing_m"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/ic_button"
+
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_m"
+                android:layout_marginLeft="@dimen/spacing_m"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_talk" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_m"
+                android:layout_marginRight="@dimen/spacing_m"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:text="입장"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/notosanskr_bold"
+
+                android:includeFontPadding="false" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -279,6 +324,23 @@
             android:layout_marginTop="@dimen/spacing_l"
             app:layout_constraintTop_toBottomOf="@id/tv_user_group"/>
 
+        <TextView
+            android:id="@+id/tv_no_meeting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_m"
+            android:layout_marginEnd="@dimen/spacing_m"
+            android:layout_marginTop="@dimen/spacing_l"
+            app:layout_constraintTop_toBottomOf="@id/tv_user_group"
+
+            android:text="예정된 소모임 일정이 없습니다."
+            android:textSize="14sp"
+            android:textColor="#7c7f90"
+            android:fontFamily="@font/notosanskr_regular"
+
+            android:visibility="visible"
+            android:includeFontPadding="false" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -289,6 +351,7 @@
         app:layout_constraintTop_toBottomOf="@id/rv_group_members"
         app:layout_constraintBottom_toBottomOf="parent"
 
+        android:visibility="visible"
         android:background="#F0F0F0">
 
         <ImageView
@@ -323,26 +386,53 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_accept_page"
-        android:layout_width="84dp"
+        android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:layout_gravity="center"
         android:layout_marginTop="@dimen/spacing_xs"
-        android:layout_marginEnd="@dimen/spacing_m"
-        android:layout_marginRight="@dimen/spacing_m"
-        android:background="@drawable/ic_profile_rounded_rectangle"
-        android:drawableRight="@drawable/ic_arrow_right2"
-        android:drawablePadding="0dp"
-        android:fontFamily="@font/notosanskr_bold"
-        android:gravity="center"
-        android:includeFontPadding="false"
-        android:text="가입 신청"
-        android:textColor="#33353d"
-        android:textSize="12sp"
-        style="?android:attr/borderlessButtonStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_group_dday" />
+        app:layout_constraintEnd_toEndOf="@id/layout_group_dday"
+        app:layout_constraintTop_toBottomOf="@id/layout_group_dday"
+
+        android:visibility="gone"
+
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@drawable/ic_rounded_rectangle">
+
+        <TextView
+            android:id="@+id/tv_accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_xs"
+            android:layout_marginLeft="@dimen/spacing_xs"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:text="가입 신청"
+            android:textSize="12sp"
+            android:textColor="#33353d"
+            android:fontFamily="@font/notosanskr_regular"
+
+            android:includeFontPadding="false" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginEnd="@dimen/spacing_xs"
+            android:layout_marginRight="@dimen/spacing_xs"
+            app:layout_constraintStart_toEndOf="@id/tv_accept"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_arrow_right2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/btn_setting"
@@ -353,6 +443,8 @@
         android:layout_marginRight="@dimen/spacing_m"
         android:background="@drawable/ic_setting"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
