--- a/app/src/main/res/layout/my_group_item2.xml
+++ b/app/src/main/res/layout/my_group_item2.xml
@@ -151,6 +151,18 @@
 
                 android:includeFontPadding="false"/>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_xs"
+                android:layout_marginRight="@dimen/spacing_xs"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/subject_tV"
+                app:layout_constraintBottom_toBottomOf="@id/subject_tV"
+
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_arrow_right" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
