--- a/app/src/main/res/layout/join_item.xml
+++ b/app/src/main/res/layout/join_item.xml
@@ -39,16 +39,14 @@
         android:id="@+id/category_image"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginStart="@dimen/spacing_xxs"
-        android:layout_marginLeft="@dimen/spacing_xxs"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="@dimen/spacing_xs"
+        android:layout_marginLeft="@dimen/spacing_xs"
+        app:layout_constraintStart_toEndOf="@+id/user_name"
+        app:layout_constraintTop_toTopOf="@id/user_name"
+        app:layout_constraintBottom_toBottomOf="@id/user_name"
 
         android:background="@drawable/ic_button_study"
-        android:contentDescription="@null"
-        android:padding="@dimen/spacing_xs"
-        android:src="@drawable/writing_hand"
-        app:layout_constraintStart_toEndOf="@+id/user_name"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:contentDescription="@null"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
