--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="@dimen/spacing_m"
     android:orientation="vertical">
 
     <ImageView
@@ -12,7 +9,8 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginBottom="@dimen/spacing_xxs"
-        android:background="@drawable/pro_min" />
+
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/name"
