--- a/app/src/main/res/layout/activity_join_accept.xml
+++ b/app/src/main/res/layout/activity_join_accept.xml
@@ -46,20 +46,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
+    <ImageView
+        android:id="@+id/image_no_member"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="@dimen/spacing_xs"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_no_member"
+
+        android:contentDescription="@null"
+        app:srcCompat="@drawable/ic_none" />
+
     <TextView
         android:id="@+id/tv_no_member"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_m"
-        app:layout_constraintStart_toStartOf="@id/textView6"
-        app:layout_constraintTop_toBottomOf="@id/textView6"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
         android:text="가입을 신청한 사람이 없습니다."
-        android:textSize="14sp"
-        android:textColor="#7c7f90"
+        android:textSize="18sp"
+        android:textColor="#3b3e4a"
         android:fontFamily="@font/notosanskr_regular"
+        android:gravity="center"
 
-        android:visibility="gone"
         android:includeFontPadding="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
