--- a/app/src/main/res/layout/activity_profile_other.xml
+++ b/app/src/main/res/layout/activity_profile_other.xml
@@ -33,16 +33,6 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/image_edit_profile"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintEnd_toEndOf="@id/cv_image_user_01"
-        app:layout_constraintBottom_toBottomOf="@id/cv_image_user_01"
-
-        android:contentDescription="@null"
-        app:srcCompat="@drawable/ic_edit_profile" />
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_image_user_02"
         android:layout_width="64dp"
@@ -201,24 +191,18 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_m"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_user_group"
-            tools:layout_editor_absoluteX="16dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_caution"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/spacing_m"
-            android:layout_marginTop="@dimen/spacing_m"
-            android:layout_marginBottom="@dimen/spacing_m"
-            android:layout_marginEnd="@dimen/spacing_m"
+            android:layout_margin="@dimen/spacing_m"
             app:layout_constraintTop_toBottomOf="@id/tv_user_group"
-            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
 
-            android:visibility="gone"
+            android:visibility="visible"
             android:background="#f8f8fa">
 
             <ImageView
@@ -231,7 +215,7 @@
                 app:layout_constraintBottom_toTopOf="@id/tv_caution"
 
                 android:contentDescription="@null"
-                app:srcCompat="@drawable/ic_caution" />
+                app:srcCompat="@drawable/ic_none" />
 
             <TextView
                 android:id="@+id/tv_caution"
@@ -255,14 +239,28 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/chatbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:backgroundTint="@color/back"
-        android:src="@drawable/invalid_name"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/fab_chat"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="@dimen/spacing_m"
+        android:layout_marginRight="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/spacing_xl"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+        app:cardElevation="8dp"
+        app:cardCornerRadius="32dp"
+        app:cardBackgroundColor="#33353d">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_talk" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
