--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="68dp"
+    android:layout_height="78dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/member_image"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="@dimen/spacing_xxs"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
         android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_xxs"
+        app:layout_constraintStart_toStartOf="@id/member_image"
+        app:layout_constraintEnd_toEndOf="@id/member_image"
+        app:layout_constraintTop_toBottomOf="@id/member_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:text="홍길동"
+        android:textSize="12sp"
+        android:textColor="#3b3e4a"
         android:fontFamily="@font/notosanskr_regular"
         android:gravity="center"
-        android:includeFontPadding="false"
-        android:text="홍길동"
-        android:textColor="#3b3e4a"
-        android:textSize="12sp" />
-</LinearLayout>
+
+        android:includeFontPadding="false" />
+</androidx.constraintlayout.widget.ConstraintLayout>
